--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: rgb(73, 94, 87);
+  --secondary-color: rgb(242, 255, 0);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,159 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: grid;
+  grid-template-areas: "header"
+                       "main"
+                       "footer";
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  padding: 1rem;
+  grid-area: header;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  ul {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+
+    li {
+      border-bottom: 3px solid var(--primary-color);
+      &:hover {
+        border-color: var(--secondary-color);
+      }
+
+      a {
+        color: #000;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+input {
+  all: unset;
+  padding: 1rem;
+  text-align: center;
+  border: 2px solid var(--primary-color);
+  border-radius: 6px;
+}
+
+.title-page {
+  text-align: center;
+}
+
+section {
+  padding: 1rem;
+}
+
+.choose-booking-date {
+  display: grid;
+  gap: 25px;
+  grid-template-areas: "title-booking-date title-booking-date"
+                       "datepicker timepicker";
+
+  .title {
+    grid-area: title-booking-date;
+  }
+
+  input[type="date"] {
+    grid-area: datepicker;
+  }
+
+  input[type="time"] {
+    grid-area: timepicker;
+  }
+}
+
+.choose-booking-guests {
+  display: grid;
+  grid-template-areas: "title-booking-guests"
+                       "guestpicker";
+
+  .title {
+    grid-area: title-booking-guests;
+  }
+
+  input {
+    all: unset;
+    border: 2px solid var(--primary-color);
+    border-radius: 6px;
+    grid-area: guestpicker;
+  }
+
+  input[type="number"] {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    -webkit-appearance: textfield;
+       -moz-appearance: textfield;
+            appearance: textfield;
+  }
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+  }
+
+  button {
+    all: unset;
+  }
+
+  .guestpicker {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    .minus, .plus {
+      position: absolute;
+      cursor: pointer;
+    }
+
+    .plus {
+      right: 10px;
+    }
+
+    .minus {
+      left: 10px;
+    }
+  }
+  
+}
+
+.contact-details {
+  
+  form {
+    gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+
+    input[name="firstname"] {
+      grid-column: span 1;
+    }
+
+    input[name="phone"], input[type="submit"] {
+      grid-column: span 2;
+    }
+
+    input[type="submit"] {
+      background-color: var(--primary-color);
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+  }
+
 }
